--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
+'''
+instale as dependencias necessárias
+
+ $ pip install -r requirements.txt
+'''
+
 opencv-python
-face_recognition
+face-recognition
 numpy
+dlib
